--- a/app/src/main/res/layout/row_timetable.xml
+++ b/app/src/main/res/layout/row_timetable.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="66dp"
+    android:layout_height="60dp"
+    android:id="@+id/rl_materie"
     android:background="@drawable/border_blue"
     android:layout_marginTop="10dp">
 
@@ -13,9 +14,8 @@
         android:text="POO"
         android:layout_marginStart="30dp"
         android:layout_marginTop="1dp"
-        android:layout_marginBottom="6dp"
         android:textColor="@color/colorText"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         />
 
@@ -24,7 +24,7 @@
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="6dp"
+        android:layout_marginTop="2dp"
         android:layout_marginBottom="2dp"
         android:layout_centerVertical="true"
         android:src="@drawable/ic_add_white"
