--- a/app/src/main/res/layout/activity_add_class_timetable.xml
+++ b/app/src/main/res/layout/activity_add_class_timetable.xml
@@ -81,16 +81,16 @@
 
             <Button
                 android:id="@+id/btn_signin"
-                android:layout_marginStart="90dp"
-                android:layout_marginEnd="90dp"
+                android:layout_marginEnd="20dp"
                 android:padding="6dp"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/et_sala"
                 android:layout_marginTop="32dp"
-                android:textSize="20sp"
                 android:text="Adăugare"
                 android:textAllCaps="false"
+                android:textSize="16sp"
+                android:layout_alignParentEnd="true"
                 android:textColor="@color/colorWhite"
                 android:background="@drawable/border_blue_full"
                 android:onClick="onAdd"
