--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -8,16 +8,19 @@
     android:orientation="vertical"
     tools:context=".Activities.CalendarActivity">
 
+    <include layout="@layout/toolbar_with_back_button"/>
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="600dp">
+        android:layout_height="600dp"
+        android:layout_below="@+id/toolbar_with_back_button">
 
     <LinearLayout
         android:id="@+id/ll_calendar"
         android:layout_width="360dp"
-        android:layout_height="wrap_content"
+        android:layout_height="324dp"
         android:background="@color/colorWhite"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:layout_gravity="center">
 
         <CalendarView
@@ -40,7 +43,7 @@
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:textColor="@color/colorTextHint"
-            android:textSize="18sp"
+            android:textSize="20sp"
             android:layout_centerInParent="true"
             android:visibility="invisible"
             />
@@ -50,9 +53,7 @@
         android:id="@+id/et_event"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16dp"
-        android:layout_marginTop="20dp"
-        android:layout_below="@+id/tv_calendar"
+        android:textSize="20dp"
         android:textStyle="bold"
         android:layout_gravity="center"
         android:textAlignment="center"
@@ -63,7 +64,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="620dp">
+            android:layout_height="550dp">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/btn_add_post"
@@ -73,7 +74,8 @@
             app:fabSize="mini"
             android:backgroundTint="@color/colorPrimary"
             android:src="@drawable/ic_add_white_24dp"
-            android:layout_margin="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="20dp"
             android:layout_alignParentBottom="true"
             android:onClick="OnAddEvent"/>
         </RelativeLayout>
