--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -6,13 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".Activities.MapActivity">
 
+    <include layout="@layout/toolbar_with_back_button"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar_with_back_button">
+
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
         <fragment
             android:id="@+id/map_fragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:name="com.google.android.gms.maps.SupportMapFragment"/>
     </FrameLayout>
+    </RelativeLayout>
 </RelativeLayout>
