--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -7,14 +7,23 @@
     tools:context=".Activities.NewsActivity"
     android:fillViewport="true">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+    <include layout="@layout/toolbar_with_back_button"/>
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/toolbar_with_back_button">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cv_1"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="70dp"
             android:layout_margin="8dp"
             android:onClick="OnRegulamente">
 
@@ -23,26 +32,39 @@
                 android:layout_height="match_parent"
                 android:layout_toStartOf="@+id/tv_1"
                 android:scaleType="centerInside"
-                android:background="@color/colorPurple"
+                android:background="@drawable/border_blue"
                 android:alpha="0.7"/>
 
+            <ImageView
+                android:id="@+id/iv_ic1"
+                android:layout_width="34dp"
+                android:layout_height="34dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="2dp"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_9"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="90dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="REGULAMENT"
-                android:layout_marginStart="30dp"
-                android:layout_marginEnd="30dp"
-                android:textColor="@color/colorWhite"
-                android:textSize="26sp"
-                android:layout_gravity="center"/>
-
+                android:text="Regulamente"
+                android:layout_gravity="center"
+                android:textColor="@color/colorText"
+                android:textStyle="bold"
+                android:textSize="16sp" />
+            </LinearLayout>
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cv_2"
             android:layout_width="match_parent"
             android:layout_below="@id/cv_1"
-            android:layout_height="150dp"
+            android:layout_height="70dp"
             android:layout_margin="8dp"
             android:onClick="OnStructura">
 
@@ -51,27 +73,40 @@
                 android:layout_height="match_parent"
                 android:layout_toStartOf="@+id/tv_2"
                 android:scaleType="centerInside"
-                android:background="@color/colorPurple"
+                android:background="@drawable/border_blue"
                 android:alpha="0.7"/>
 
+            <ImageView
+                android:id="@+id/iv_ic2"
+                android:layout_width="34dp"
+                android:layout_height="34dp"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="2dp"
+                android:src="@drawable/ic_7" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="90dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="STRUCTURĂ AN UNIVERSITAR"
-                android:layout_marginStart="30dp"
-                android:layout_marginEnd="30dp"
-                android:textColor="@color/colorWhite"
-                android:textSize="26sp"
+                android:text="Structură an universitar"
+                android:textColor="@color/colorText"
+                android:textStyle="bold"
+                android:textSize="16sp"
                 android:layout_gravity="center"
-                android:gravity="center"/>
-
+                />
+            </LinearLayout>
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cv_3"
             android:layout_width="match_parent"
             android:layout_below="@id/cv_2"
-            android:layout_height="150dp"
+            android:layout_height="70dp"
             android:layout_margin="8dp"
             android:onClick="OnPractica">
 
@@ -80,27 +115,39 @@
                 android:layout_height="match_parent"
                 android:layout_toStartOf="@+id/tv_3"
                 android:scaleType="centerInside"
-                android:background="@color/colorPurple"
+                android:background="@drawable/border_blue"
                 android:alpha="0.7"/>
 
+            <ImageView
+                android:id="@+id/iv_ic3"
+                android:layout_width="34dp"
+                android:layout_height="34dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="2dp"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_4"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="90dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="PRACTICĂ"
-                android:layout_marginStart="30dp"
-                android:layout_marginEnd="30dp"
-                android:textColor="@color/colorWhite"
-                android:textSize="26sp"
                 android:layout_gravity="center"
-                android:gravity="center"/>
-
+                android:text="Practică"
+                android:textColor="@color/colorText"
+                android:textStyle="bold"
+                android:textSize="16sp" />
+            </LinearLayout>
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cv_4"
             android:layout_width="match_parent"
             android:layout_below="@id/cv_3"
-            android:layout_height="150dp"
+            android:layout_height="70dp"
             android:layout_margin="8dp"
             android:onClick="OnExamene">
 
@@ -109,22 +156,117 @@
                 android:layout_height="match_parent"
                 android:layout_toStartOf="@+id/tv_4"
                 android:scaleType="centerInside"
-                android:background="@color/colorPurple"
+                android:background="@drawable/border_blue"
                 android:alpha="0.7"/>
 
+            <ImageView
+                android:id="@+id/iv_ic4"
+                android:layout_width="34dp"
+                android:layout_height="34dp"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="2dp"
+                android:src="@drawable/ic_3" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="90dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="PLANIFICARE EXAMENE"
-                android:layout_marginStart="30dp"
-                android:layout_marginEnd="30dp"
-                android:textColor="@color/colorWhite"
-                android:textSize="26sp"
                 android:layout_gravity="center"
-                android:gravity="center"/>
+                android:text="Planificare examene"
+                android:textColor="@color/colorText"
+                android:textStyle="bold"
+                android:textSize="16sp" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_5"
+            android:layout_width="match_parent"
+            android:layout_below="@id/cv_4"
+            android:layout_height="70dp"
+            android:layout_margin="8dp"
+            android:onClick="OnSecretariat">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_toStartOf="@+id/tv_5"
+                android:scaleType="centerInside"
+                android:background="@drawable/border_blue"
+                android:alpha="0.7"/>
+
+            <ImageView
+                android:id="@+id/iv_ic5"
+                android:layout_width="34dp"
+                android:layout_height="34dp"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="2dp"
+                android:src="@drawable/ic_1" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="90dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Secretariat"
+                    android:textColor="@color/colorText"
+                    android:textStyle="bold"
+                    android:textSize="16sp" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_6"
+            android:layout_width="match_parent"
+            android:layout_below="@id/cv_5"
+            android:layout_height="70dp"
+            android:layout_margin="8dp"
+            android:onClick="OnOptionale">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_toStartOf="@+id/tv_6"
+                android:scaleType="centerInside"
+                android:background="@drawable/border_blue"
+                android:alpha="0.7"/>
+
+            <ImageView
+                android:id="@+id/iv_ic6"
+                android:layout_width="34dp"
+                android:layout_height="34dp"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="2dp"
+                android:src="@drawable/ic_5" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="90dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Opționale"
+                    android:textColor="@color/colorText"
+                    android:textStyle="bold"
+                    android:textSize="16sp" />
+            </LinearLayout>
         </androidx.cardview.widget.CardView>
 
     </RelativeLayout>
 
+    </LinearLayout>
 </androidx.core.widget.NestedScrollView>
