--- a/app/src/main/res/layout/activity_orar.xml
+++ b/app/src/main/res/layout/activity_orar.xml
@@ -9,14 +9,20 @@
     <RelativeLayout
         android:id="@+id/rl_zile"
         android:layout_width="match_parent"
-        android:layout_marginTop="10dp"
         android:layout_height="match_parent">
+
+    <include layout="@layout/toolbar_with_back_button"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar_with_back_button">
 
         <LinearLayout
             android:id="@+id/ll_zile"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginTop="6dp"
+            android:layout_height="42dp"
+            android:layout_marginTop="2dp"
             android:orientation="horizontal"
             android:gravity="center_horizontal"
             android:layout_centerHorizontal="true">
@@ -30,7 +36,7 @@
                 android:onClick="OnLuni"
                 android:text="Luni"
                 android:textColor="@color/colorText"
-                android:textSize="16sp"
+                android:textSize="12sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -42,7 +48,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
-                android:textSize="16sp"
+                android:textSize="12sp"
                 android:textColor="@color/colorText"
                 android:onClick="OnMarti"
                 />
@@ -56,7 +62,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
-                android:textSize="16sp"
+                android:textSize="12sp"
                 android:textColor="@color/colorText"
                 android:onClick="OnMiercuri"
                 />
@@ -70,7 +76,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
-                android:textSize="16sp"
+                android:textSize="12sp"
                 android:textColor="@color/colorText"
                 android:onClick="OnJoi"
                 />
@@ -84,7 +90,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
-                android:textSize="16sp"
+                android:textSize="12sp"
                 android:textColor="@color/colorText"
                 android:onClick="OnVineri"
                 />
@@ -108,12 +114,13 @@
             android:background="@drawable/border_blue_full"
             android:text="Salvare"
             android:textAllCaps="false"
+            android:textSize="16sp"
             android:layout_centerHorizontal="true"
             android:textColor="@color/colorWhite"
             android:layout_marginTop="2dp"
             android:layout_marginEnd="20dp"
             android:layout_alignParentBottom="true"
             android:onClick="OnSaveTimetable"/>
-
+    </RelativeLayout>
     </RelativeLayout>
 </androidx.core.widget.NestedScrollView>
