--- a/app/src/main/res/layout/activity_schedules.xml
+++ b/app/src/main/res/layout/activity_schedules.xml
@@ -8,8 +8,14 @@
     android:fillViewport="true">
 
     <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+    <include layout="@layout/toolbar_with_back_button"/>
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar_with_back_button">
 
         <androidx.cardview.widget.CardView
         android:id="@+id/cv_1"
@@ -229,5 +235,5 @@
         // IS/CTI/INFO/săli
 
     </RelativeLayout>
-
+    </RelativeLayout>
 </androidx.core.widget.NestedScrollView>
