--- a/app/src/main/res/layout/activity_send_mail.xml
+++ b/app/src/main/res/layout/activity_send_mail.xml
@@ -17,7 +17,8 @@
             android:layout_marginEnd="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="DESTINATAR"
+            android:text="Destinatar"
+            android:textStyle="bold"
             android:layout_marginTop="26dp"
             android:textSize="16sp"
             android:textColor="@color/colorText"
@@ -31,9 +32,9 @@
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:layout_marginTop="30dp"
-            android:background="@color/colorTextHint"
+            android:background="@drawable/border_blue"
             android:textColor="@color/colorWhite"
-            android:text="Click pentru a alege profesorul"
+            android:text="Profesor ..."
             android:padding="6dp"
             android:onClick="OnChooseProf"
             android:layout_marginStart="20dp"
@@ -47,7 +48,8 @@
             android:layout_marginEnd="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="SUBIECT"
+            android:text="Subiect"
+            android:textStyle="bold"
             android:layout_marginTop="26dp"
             android:textSize="16sp"
             android:textColor="@color/colorText"
@@ -64,10 +66,10 @@
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:textColor="@color/colorText"
-            android:hint="Nota examen TS"
+            android:hint="..."
             android:padding="6dp"
             android:textStyle="bold"
-            android:backgroundTint="@color/colorTextBold"
+            android:background="@drawable/border_blue"
             />
 
         <TextView
@@ -76,7 +78,8 @@
             android:layout_marginEnd="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="MESAJ"
+            android:text="Mesaj"
+            android:textStyle="bold"
             android:layout_below="@+id/et_email_subiect"
             android:layout_marginTop="16dp"
             android:textSize="16sp"
@@ -94,19 +97,19 @@
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:textColor="@color/colorText"
-            android:hint="Nu este trecuta nota corecta. Se poate sa mai verificati o data? Mulrumesc."
+            android:hint="..."
             android:padding="6dp"
             android:maxLines="7"
             android:lines="7"
             android:textStyle="bold"
-            android:backgroundTint="@color/colorTextBold"
+            android:background="@drawable/border_blue"
             />
 
         <Button
             android:id="@+id/btn_send"
             android:layout_below="@+id/et_email_mesaj"
             android:layout_marginTop="32dp"
-            android:textSize="20sp"
+            android:textSize="16sp"
             android:text="Trimite"
             android:padding="6dp"
             android:textAllCaps="false"
@@ -114,9 +117,16 @@
             android:background="@drawable/border_blue_full"
             android:onClick="OnSend"
             android:layout_marginStart="90dp"
-            android:layout_marginEnd="90dp"
-            android:layout_width="match_parent"
+            android:layout_marginEnd="20dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+
+            android:layout_alignParentEnd="true"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+
             />
+
+
     </RelativeLayout>
 </androidx.core.widget.NestedScrollView>
