--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -14,7 +14,7 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/cv_1"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="100dp"
             android:layout_margin="8dp">
 
             <RelativeLayout
@@ -46,8 +46,8 @@
 
                     <ImageView
                         android:id="@+id/iv_m1"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
+                        android:layout_width="26dp"
+                        android:layout_height="26dp"
                         android:layout_centerHorizontal="true"
                         android:src="@drawable/ic_email_black_24dp" />
 
@@ -57,9 +57,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
-                        android:text="COLEG"
+                        android:text="Coleg"
                         android:textSize="20sp"
-                        android:textAppearance="@color/colorText"
+                        android:textColor="@color/colorText"
                         android:textStyle="bold" />
 
                 </RelativeLayout>
@@ -70,7 +70,7 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/cv_2"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="100dp"
             android:layout_margin="8dp"
             android:layout_below="@+id/cv_1">
 
@@ -104,8 +104,8 @@
 
                     <ImageView
                         android:id="@+id/iv_m2"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
+                        android:layout_width="26dp"
+                        android:layout_height="26dp"
                         android:layout_centerHorizontal="true"
                         android:src="@drawable/ic_email_black_24dp" />
 
@@ -113,11 +113,11 @@
                         android:id="@+id/tv_2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="PROFESOR"
+                        android:text="Profesor"
                         android:layout_below="@+id/iv_m2"
                         android:layout_centerHorizontal="true"
                         android:textSize="20sp"
-                        android:textAppearance="@color/colorText"
+                        android:textColor="@color/colorText"
                         android:textStyle="bold" />
 
                 </RelativeLayout>
