--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -146,6 +146,7 @@
         <Switch
             android:layout_width="44dp"
             android:layout_height="40dp"
+            android:layout_marginTop="8dp"
             android:id="@+id/switch1"
             android:checked="false"/>
 
