--- a/app/src/main/res/layout/toolbar_with_back_button.xml
+++ b/app/src/main/res/layout/toolbar_with_back_button.xml
@@ -2,12 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/toolbar_with_back_button"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="46dp">
     <ImageView
         android:id="@+id/iv_toolbar_back"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:src="@drawable/ic_arrow_back_white_24dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_centerVertical="true"
+        android:src="@drawable/ic_keyboard_backspace_black_24dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
@@ -22,7 +23,6 @@
         android:gravity="center"
         android:textColor="@color/colorWhite"
         android:layout_centerVertical="true"
-        android:textStyle="bold"
-        android:textSize="16sp"
+        android:textSize="18sp"
         />
 </RelativeLayout>
