--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -14,68 +14,152 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@+id/toolbar_with_back_button">
 
-    <TextView
-        android:id="@+id/tv_event_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Denumire eveniment"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="30dp"
-        android:textSize="20sp"
-        android:textColor="@color/colorText"
-        />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            android:id="@+id/ll_eveniment">
 
-    <EditText
-        android:id="@+id/et_event_name"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="30dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_event_name"
-        android:singleLine="true"
-        android:textSize="22sp"
-        android:hint="Examen P1 la ..."
-        android:inputType="textPersonName"
-        android:padding="6dp"
-        android:textColor="@color/colorText"
-        android:textStyle="bold"
-        android:backgroundTint="@color/colorTextBold"
-        android:layout_marginBottom="10dp"
-        />
+        <ImageView
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:src="@drawable/ic_edit_black_24dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginStart="20dp"
+            />
 
-    <TextView
-        android:id="@+id/tv_event_hour"
-        android:layout_below="@+id/et_event_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Oră start"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="30dp"
-        android:textSize="20sp"
-        android:textColor="@color/colorText"
-        />
+        <TextView
+            android:id="@+id/tv_prenume"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Titlu eveniment"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="24dp"
+            android:textSize="18sp"
+            android:textColor="@color/colorText"
+            />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/ll_eveniment"
+            android:id="@+id/ll_eveniment_edit">
+
+
+            <EditText
+                android:layout_width="240dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="60dp"
+                android:singleLine="true"
+                android:textColor="@color/colorText"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:id="@+id/et_nume_complet"/>
+            />
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            android:layout_below="@+id/ll_eveniment_edit"
+            android:id="@+id/ll_locatie">
+
+            <ImageView
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:src="@drawable/ic_location_on_black_24dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginStart="20dp"
+                />
+
+            <TextView
+                android:id="@+id/tv_locatie"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Locație eveniment"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginTop="24dp"
+                android:textSize="18sp"
+                android:textColor="@color/colorText"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/ll_locatie"
+            android:id="@+id/ll_locatie_edit">
+
+
+            <EditText
+                android:layout_width="240dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="60dp"
+                android:singleLine="true"
+                android:textColor="@color/colorText"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:id="@+id/et_nume_locatie"/>
+            />
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:id="@+id/ll_ora"
+            android:layout_below="@+id/ll_locatie_edit">
+
+            <ImageView
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:src="@drawable/ic_access_time_black_24dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginStart="20dp"
+                />
+
+            <TextView
+                android:id="@+id/tv_ora"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Oră început eveniment"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginTop="24dp"
+                android:textSize="18sp"
+                android:textColor="@color/colorText"
+                />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/tv_pick_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Click"
-            android:layout_below="@id/tv_event_hour"
+            android:layout_below="@id/ll_ora"
             android:textColor="@color/colorText"
-            android:layout_marginStart="20dp"
-            android:textSize="22sp"
+            android:layout_marginStart="62dp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:layout_marginTop="30dp" />
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="620dp">
+        android:layout_below="@+id/tv_pick_time"
+        android:layout_marginTop="90dp"
+        android:layout_height="wrap_content">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/btn_add_event"
