--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -20,13 +20,13 @@
                 android:id="@+id/tv_title_subject"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="SUBIECT"
-                android:textStyle="bold"
+                android:text="Titlu"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginTop="24dp"
-                android:textSize="16sp"
-                android:textColor="@color/colorText"/>
+                android:textColor="@color/colorText"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
 
             <EditText
@@ -34,44 +34,42 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tv_title_subject"
-                android:textSize="20sp"
                 android:singleLine="true"
                 android:layout_marginTop="30dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
-                android:textColor="@color/colorTextBold"
-                android:textStyle="bold"
-                android:hint="a b c ..."
+                android:textSize="18sp"
+                android:textColor="@color/colorText"
+                android:hint="..."
                 />
 
             <TextView
                 android:id="@+id/tv_post_message"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="MESAJ"
+                android:text="Mesaj"
                 android:textStyle="bold"
                 android:layout_below="@+id/et_text_subject"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginTop="24dp"
-                android:textSize="16sp"
+                android:textSize="20sp"
                 android:textColor="@color/colorText"
                 />
 
 
             <EditText
                 android:id="@+id/et_post_message"
-                android:layout_width="match_parent"
+                android:layout_width    ="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tv_post_message"
                 android:maxLines="7"
-                android:lines="7"
-                android:textSize="20sp"
+                android:lines="4"
+                android:textSize="18sp"
+                android:textColor="@color/colorText"
                 android:layout_marginTop="30dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
-                android:textColor="@color/colorTextBold"
-                android:textStyle="bold"
                 android:hint="..."
                 android:gravity="top|left"
                 />
@@ -82,17 +80,19 @@
                 android:layout_marginEnd="90dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:onClick="shareOnFacebook"
                 android:text="Distribuie pe Facebook"
                 android:layout_below="@+id/et_post_message"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="32dp"
                 android:textSize="20sp"
                 android:padding="6dp"
+                android:visibility="invisible"
                 android:textAllCaps="false"
                 android:textColor="@color/colorWhite"
                 android:background="@drawable/border_blue_full"
                 />
+             //android:onClick="shareOnFacebook"
+
 
         </RelativeLayout>
     </androidx.core.widget.NestedScrollView>
