--- a/app/src/main/res/layout/activity_find_student.xml
+++ b/app/src/main/res/layout/activity_find_student.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusableInTouchMode="true"
     tools:context=".Activities.FindStudentActivity">
 
     <include layout="@layout/toolbar_with_back_search_button"/>
@@ -13,12 +14,19 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/toolbar_with_back_search_button">
 
+        <EditText
+            android:id="@+id/et_student_cautat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_listed_students"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:layout_below="@+id/toolbar_with_back_search_button"/>
+            android:layout_below="@+id/et_student_cautat"/>
 
     </RelativeLayout>
 
