--- a/app/src/main/res/layout/activity_schedules.xml
+++ b/app/src/main/res/layout/activity_schedules.xml
@@ -20,7 +20,7 @@
         <androidx.cardview.widget.CardView
         android:id="@+id/cv_1"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="110dp"
         android:layout_margin="8dp"
             android:onClick="OnBiblioteca">
 
@@ -63,7 +63,7 @@
             android:id="@+id/cv_2"
             android:layout_below="@+id/cv_1"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="110dp"
             android:layout_margin="8dp"
             android:onClick="OnRectorat">
 
@@ -106,7 +106,7 @@
             android:id="@+id/cv_3"
             android:layout_below="@+id/cv_2"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="110dp"
             android:layout_margin="8dp"
             android:onClick="OnSport">
 
@@ -149,7 +149,7 @@
             android:id="@+id/cv_4"
             android:layout_below="@+id/cv_3"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="110dp"
             android:layout_margin="8dp"
             android:onClick="OnBazin">
 
@@ -192,9 +192,9 @@
             android:id="@+id/cv_5"
             android:layout_below="@+id/cv_4"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="110dp"
             android:layout_margin="8dp"
-            android:onClick="OnFacultate">
+            android:onClick="OnSecretariat">
 
             <ImageView
                 android:layout_width="match_parent"
@@ -221,7 +221,50 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
-                    android:text="Facultate"
+                    android:text="Secretariat"
+                    android:maxLines="1"
+                    android:textSize="24sp"
+                    android:textAppearance="@color/colorText"
+                    android:textStyle="bold"
+                    android:layout_marginEnd="16dp" />
+
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_6"
+            android:layout_below="@+id/cv_5"
+            android:layout_width="match_parent"
+            android:layout_height="110dp"
+            android:layout_margin="8dp"
+            android:onClick="OnSectii">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_toStartOf="@+id/tv_4"
+                android:scaleType="centerInside"
+                android:src="@drawable/iscti"
+                android:alpha="0.7"/>
+
+            <View
+                android:id="@+id/v_6"
+                android:layout_width="match_parent"
+                android:layout_height="32dp"
+                android:alpha="0.7"
+                android:background="#e6e9ef"/>
+
+            <RelativeLayout
+                android:id="@+id/rl_6"
+                android:layout_width="match_parent"
+                android:layout_height="150dp">
+
+                <TextView
+                    android:id="@+id/tv_6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:text="IS     CTI     Info"
                     android:maxLines="1"
                     android:textSize="24sp"
                     android:textAppearance="@color/colorText"
@@ -232,7 +275,7 @@
         </androidx.cardview.widget.CardView>
 
         // SECRETARIAT parter, et 5, et 6, ASPC
-        // IS/CTI/INFO/săli
+
 
     </RelativeLayout>
     </RelativeLayout>
