--- a/app/src/main/res/layout/row_yeargroup_posts.xml
+++ b/app/src/main/res/layout/row_yeargroup_posts.xml
@@ -12,28 +12,26 @@
         android:background="#FFFFFF">
 
         <TextView
-            android:id="@+id/tv_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="10sp"
-            android:layout_alignParentEnd="true"
-            android:textStyle="bold"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:text="26.10.2019"
-            android:textColor="@color/colorText"
-            />
-
-        <TextView
             android:id="@+id/tv_hour"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="10sp"
             android:layout_alignParentEnd="true"
             android:textStyle="bold"
-            android:layout_marginEnd="8dp"
-            android:layout_below="@+id/tv_date"
-            android:text="22:11"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="20dp"
+            android:textColor="@color/colorText"
+            />
+
+        <TextView
+            android:id="@+id/tv_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="10sp"
+            android:layout_alignParentEnd="true"
+            android:textStyle="bold"
+            android:layout_marginEnd="20dp"
+            android:layout_below="@+id/tv_hour"
             android:textColor="@color/colorText"
             />
 
@@ -57,6 +55,7 @@
             android:textSize="12sp"
             android:layout_marginTop="6dp"
             android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:layout_alignParentStart="true"
             android:text="la secretariat pana in 30 octombire (inclusiv). Orarul secretariatului il gasiti la orare sau pe facebook. Daca nu platiti veti fi pusi pe lista de propusi spre exmatriculare. Dupa, se va adauga ceva la suma si abia atunci daca nu platiti veti ajunge exmatriculati. asjflajfleijfiejdngnsi neignidng ein gidn igndkngein giengdngke"
             android:layout_below="@+id/tv_title_subject"
@@ -73,7 +72,7 @@
             android:layout_alignParentEnd="true"
             android:textStyle="bold"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="20dp"
             android:textColor="@color/colorText"
             android:layout_below="@id/tv_text_subject"
             android:text="Author name"
